ready for heroku

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -6,6 +6,11 @@
 // Scaffolding
 // -------------------------
 
+#editor { 
+    height: 300px;
+    width: 625px;
+}
+
 html {
   position: relative;
   min-height: 100%;
