--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,3 +22,4 @@ html
     
     if (loadArena)
       script(type='text/javascript', src='/js/arena.js')
+      script(type='text/javascript', src='http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js')    
