switched login urls

--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -4,7 +4,7 @@ block content
   legend Sign In
 
   p.lead(align='center')
-    a(href='/login?handle=jeffdonthemic') Sign in with your [topcoder] account
+    a(href='https://www.topcoder.com/?action=showlogin') Sign in with your [topcoder] account
   p(align='center')
     a(href='https://www.topcoder.com/?action=showlogin')
       img(src='/img/topcoder-logo-big.png', width='350')
