--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -16,9 +16,9 @@
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=title=='Login'?'active':undefined)
-            a(href='https://www.topcoder.com/?action=showlogin', target='_blank') Login
+            a(href='https://www.topcoder.com/?action=showlogin') Login
           li(class=title=='Create Account'?'active':undefined)
-            a(href='https://www.topcoder.com/?action=callback', target='_blank') Create Account
+            a(href='https://www.topcoder.com/?action=callback') Create Account
         else
           li.dropdown(class=title=='Account Management'?'active':undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
