--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -31,7 +31,7 @@ block content
     .form-group
       label.col-sm-2.control-label(for='gravatar') Gravatar
       .col-sm-4
-        img(src="#{user.gravatar()}", class='profile', width='100', height='100')
+        img(src="#{user.profile.picture ? user.profile.picture : user.gravatar()}", class='profile', width='100', height='100')
 
   .page-header
     h3 Delete Account
