--- a/views/arena/index.jade
+++ b/views/arena/index.jade
@@ -53,8 +53,18 @@ block content
 
     blockquote
       p
-      | When your code is complete and you are satisified with its functionality, submit it to run all system tests and determine whether it passes. You can submit your code as many times as you deem necessary.
+      | When your code is complete and you are satisified with its functionality, submit it to run our system tests and determine whether it passes. You can submit your code as many times as you deem necessary. The test results will display in the table below.
 
     button.btn.btn-danger.btn-lg#submitBtn(type='button', onclick='submit()') Submit 
     | &nbsp;
     button.btn.btn-success.btn-lg#successBtn(type='button', onclick='success()') Success! Claim your code! 
+
+    h3(style='padding-top:10px') Test Results
+
+    table#testresults.table
+      thead
+        tr
+          th Succeeded
+          th Expected
+          th Actual
+          th Args
