finished golden ticket code

--- a/views/arena/success.jade
+++ b/views/arena/success.jade
@@ -7,8 +7,8 @@ block content
   a(href='/account') Account page
 
   p.lead(style='margin:10px')
-    = user.goldenTicket  
+    = goldenTicket  
 
   p
   p
-  [This page will look better after the results from the UI design challenge]
+  This page will look better after the results from the UI design challenge
