fixed intro parsing

--- a/views/arena/index.jade
+++ b/views/arena/index.jade
@@ -16,7 +16,6 @@ block content
 
     #title.lead(style='padding-top:15px')
     #instruction(style='margin-top:15px;margin-bottom:15px')
-      | Loading your problem. Please wait....
 
     #definition(style='padding-bottom:15px') 
 
@@ -36,6 +35,7 @@ block content
         #editor 
 
       button.btn.btn-primary(type='button', onclick='compile()') Compile Your Code
+      | &nbsp;&nbsp; Make sure to compile your code after any changes before running tests.
 
     h3(style='padding-top:10px') Testing
 
