added sample unit tests

--- a/views/arena/index.jade
+++ b/views/arena/index.jade
@@ -21,6 +21,8 @@ block content
 
     #constraints(style='padding-bottom:25px') 
 
+    #examples(style='padding-bottom:25px') 
+
     form(role='form')
       .form-group
         label(for='language') Your Development Language &nbsp;
