--- a/views/arena/index.jade
+++ b/views/arena/index.jade
@@ -43,7 +43,7 @@ block content
 
     blockquote
       p
-      | Enter test arguments for your code below. Comma separated, strings in quotes, arrays in square brackets.
+      | Enter test arguments for your code below. Comma separated, strings in quotes, arrays in square brackets. Ex. 100, "One Hundred", ["An", "Array", "of", "Strings"]
 
     form(role='form')
       .form-group
