modified test to run entire process

--- a/views/arena/index.jade
+++ b/views/arena/index.jade
@@ -59,7 +59,7 @@ block content
 
     button.btn.btn-primary#submitBtn(type='button', onclick='submit()') Run System Tests 
     | &nbsp;
-    button.btn.btn-success#successBtn(type='button', onclick='success()') Success! Claim your code! 
+    button.btn.btn-success#successBtn(type='button', onclick='success()') Finished? Submit your code! 
 
     #testResultsPanel
 
