updated ui to look mor like challenge results

--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -1,10 +1,5 @@
 extends ../layout
 
 block content
-  legend Sign In
-
-  p.lead(align='center')
-    a(href='https://www.topcoder.com/?action=showlogin') Sign in with your [topcoder] account
-  p(align='center')
-    a(href='https://www.topcoder.com/?action=showlogin')
-      img(src='/img/topcoder-logo-big.png', width='350')
+  a(href='https://www.topcoder.com/?action=showlogin')
+    img(src='/img/signin.png')
