--- a/views/home.jade
+++ b/views/home.jade
@@ -1,8 +1,5 @@
 extends layout
 
 block content
-  h1 TopCoder Open 2014
-  p.lead
-    | Would you like a free ticket to the TopCoder Open?
-    br
-    | Solve this programming challenge and 'code your way' into TCO14.
+  a(href='/arena')
+    img(src='/img/home.png')
