--- a/views/arena/index.jade
+++ b/views/arena/index.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  h2 Welcome to the Arena
+  h2 Solve this Problem!
 
   form#hidden(action='/arena/submit', method='post')
     input(type='hidden', name='_csrf', value=_csrf)
