added additional messages for loading

--- a/views/arena/index.jade
+++ b/views/arena/index.jade
@@ -9,7 +9,7 @@ block content
     input#roomId(type='hidden', name="roomId" value='#{roomId}')
     input#componentId(type='hidden', name="componentId" value='#{componentId}')
 
-  p#loading.bg-success(style='margin: 25px; padding: 25px; width: 500px;') Building the arena. This may take a second or two....
+  p#loading.bg-success(style='margin: 25px; padding: 25px; width: 500px;') Building the arena. This may take a minute or two....
 
   #problem(style='display: none')
 
