final text tweaks

--- a/views/arena/results.jade
+++ b/views/arena/results.jade
@@ -5,7 +5,8 @@ block content
     a(href='/arena')
       img(src='/img/results-incomplete.png')  
   else
-    | Use the code below to claim your free entry into 
-    a(href='http://www.tco14.com') TCO14.
+    h1 Congratulations!!
+    |  Use the registerion code below to claim your free entry into TCO14. Enter the code at the bottom of the 
+    a(href='http://appirio.regsvc.com/E2', target='_blank') TCO14 Registration page. 
     p.lead(style='margin:10px')
       = user.goldenTicket  
