--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -5,8 +5,8 @@ block content
     h3 Code Your Way In "Golden Tickets"
     hr
     if (typeof user.goldenTicket != 'undefined')
-      | Use the code below to claim your free entry into 
-      a(href='http://www.tco14.com') TCO14.
+      | Use the registerion code below to claim your free entry into TCO14. Enter the code at the bottom of the 
+      a(href='http://appirio.regsvc.com/E2', target='_blank') TCO14 Registration page. 
       p.lead(style='margin:10px')
         = user.goldenTicket
     else
