--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -18,7 +18,7 @@
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=title=='Login'?'active':undefined)
-            a(href='/login') Login
+            a(href='https://www.topcoder.com/?action=showlogin') Login
           li(class=title=='Create Account'?'active':undefined)
             a(href='https://www.topcoder.com/?action=callback') Create Account
         else
