--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,4 +23,6 @@ html
     
     if (loadArena)
       script(type='text/javascript', src='/js/arena.js')
-      script(type='text/javascript', src='http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js')    
+      script(type='text/javascript', src='http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js')
+    if (checkStatus)
+      script(type='text/javascript', src='/js/checkStatus.js')   
