--- a/views/arena/submit.jade
+++ b/views/arena/submit.jade
@@ -2,6 +2,6 @@ extends ../layout
 
 block content
   h1 Running System Tests
-  |  We are currently running system tests for your code. The current status of the tests will displyay every 5 seconds.
+  |  We are currently running system tests for your code. The current status of the tests will display every 5 seconds.
 
 
