--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -20,7 +20,7 @@
           li(class=title=='Login'?'active':undefined)
             a(href='https://www.topcoder.com/?action=showlogin') Login
           li(class=title=='Create Account'?'active':undefined)
-            a(href='https://www.topcoder.com/?action=callback') Create Account
+            a(href='http://www.topcoder.com/?action=callback&utmSource=tco14&utmCampaign=CYWI') Create Account
         else
           li.dropdown(class=title=='Account Management'?'active':undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
