--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -1,16 +1,17 @@
-.navbar.navbar-default.navbar-fixed-top
+nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
   .container
     .navbar-header
-      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+      button.navbar-toggle(type='button', data-toggle='collapse', data-target='#main-navigation')
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href='/')
-    .collapse.navbar-collapse
+        img.img-responsive(src="/img/tco14-logo.png", alt="TCO14")
+    #main-navigation.collapse.navbar-collapse
       ul.nav.navbar-nav
-        li(class=title=='How It Works'?'active':undefined)
-          a(href='/') How It Works
+        li(class=title=='About'?'active':undefined)
+          a(href='/') About
         li(class=title=='Solve the Problem'?'active':undefined)
           a(href='/arena') Solve the Problem
         li(class=title=='Get Your Ticket'?'active':undefined)
@@ -19,8 +20,8 @@
         if !user
           li(class=title=='Login'?'active':undefined)
             a(href='https://www.topcoder.com/?action=showlogin') Login
-          li(class=title=='Create Account'?'active':undefined)
-            a(href='http://www.topcoder.com/?action=callback&utmSource=tco14&utmCampaign=CYWI') Create Account
+          li(class=title=='Register'?'active':undefined)
+            a(href='http://www.topcoder.com/?action=callback&utmSource=tco14&utmCampaign=CYWI') Register
         else
           li.dropdown(class=title=='Account Management'?'active':undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
