Fixed highlighting bug

--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -10,11 +10,11 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
         img.img-responsive(src="/img/tco14-logo.png", alt="TCO14")
     #main-navigation.collapse.navbar-collapse
       ul.nav.navbar-nav
-        li(class=title=='About'?'active':undefined)
+        li(class=title=='Home'?'active':undefined)
           a(href='/') About
-        li(class=title=='Solve the Problem'?'active':undefined)
+        li(class=title=='Arena'?'active':undefined)
           a(href='/arena') Solve the Problem
-        li(class=title=='Get Your Ticket'?'active':undefined)
+        li(class=title=='Results'?'active':undefined)
           a(href='/arena/results') Get Your Ticket
       ul.nav.navbar-nav.navbar-right
         if !user
