--- a/views/arena/submit.jade
+++ b/views/arena/submit.jade
@@ -1,7 +1,9 @@
 extends ../layout
 
 block content
-  h1 Running System Tests
-  |  We are currently running system tests for your code. The current status of the tests will display every 5 seconds.
-
-
+  .member-area
+    .container
+      h1 Running System Tests
+      |  We are currently running system tests for your code. The current status of the tests will display every 5 seconds.
+      a.sponsor(href="http://community.topcoder.com/tco14/sponsor/sequoia-capital/")
+      span.sr-only sponsored by Sequoia Capital
