--- a/views/doh.jade
+++ b/views/doh.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
-  h1 Doh!!
-  p.lead
-    | Something bad just happened. Yeah. It's bad.
+  .landing-page
+    .container
+      h1 Doh!!
+      p.lead
+        | Something bad just happened. Yeah. It's bad.
