--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,18 +24,18 @@ html
         div(style='display: inline;')
           img(height='1', width='1', style='border-style: none;', alt='', src='//www.googleadservices.com/pagead/conversion/1064594833/?label=OrawCLubgwoQkdvR-wM&guid=ON&script=0')
 
+    link(href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800', rel='stylesheet' ,type='text/css')
     != css('styles')
   body
     include partials/navbar
 
-    .container
+    main
       include partials/flash
       block content
 
     include partials/footer
 
     != js('application')
-    
     if (loadArena)
       script(type='text/javascript', src='/js/arena.js')
       script(type='text/javascript', src='http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js')
