--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -1,34 +1,28 @@
-.navbar.navbar-default.navbar-fixed-top
-  .container
-    .navbar-header
-      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href='/')
-    .collapse.navbar-collapse
-      ul.nav.navbar-nav
-        li(class=title=='How It Works'?'active':undefined)
-          a(href='/') How It Works
-        li(class=title=='Solve the Problem'?'active':undefined)
-          a(href='/arena') Solve the Problem
-        li(class=title=='Get Your Ticket'?'active':undefined)
-          a(href='/arena/results') Get Your Ticket
-      ul.nav.navbar-nav.navbar-right
-        if !user
-          li(class=title=='Login'?'active':undefined)
-            a(href='https://www.topcoder.com/?action=showlogin') Login
-          li(class=title=='Create Account'?'active':undefined)
-            a(href='http://www.topcoder.com/?action=callback&utmSource=tco14&utmCampaign=CYWI') Create Account
-        else
-          li.dropdown(class=title=='Account Management'?'active':undefined)
-            a.dropdown-toggle(href='#', data-toggle='dropdown')
-              if user.profile.picture
-                img(src='#{user.profile.picture}')
-              else
-                img(src='#{user.gravatar(60)}')
-              | #{user.profile.name || user.email || user.id}&nbsp;
-              i.caret
-            ul.dropdown-menu
-              li: a(href='/account') My Account
+header
+  nav.navbar(role="navigation")
+    .container
+      .navbar-header
+        button.navbar-toggle(type='button', data-toggle='collapse', data-target='#main-navigation')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='/')
+          img.img-responsive(src="/img/top-logo.png", alt="TCO14")
+      .collapse.navbar-collapse(id="main-navigation")
+        ul.nav.navbar-nav
+          li(class=title=='About'?'active':undefined)
+            a(href='/') About
+          li(class=title=='Solve the Problem'?'active':undefined)
+            a(href='/arena') Solve the Problem
+          li(class=title=='Get Your Ticket'?'active':undefined)
+            a(href='/arena/results') Get Your Ticket
+        ul.nav.navbar-nav.navbar-right
+          if !user
+            li(class=title=='Login'?'active':undefined)
+              a(href='https://www.topcoder.com/?action=showlogin') Login
+            li(class=title=='Create Account'?'active':undefined)
+              a(href='http://www.topcoder.com/?action=callback&utmSource=tco14&utmCampaign=CYWI') Create Account
+          else
+            li
+              a(href="/logout") Logout
