Fixed some bugs in arena page

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -504,7 +504,9 @@ table.table {
 }
 
 body {
-  padding-top: 60px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    background: #0a0a0a;
+    padding-top: 60px;
 }
 
 footer {
