--- a/views/arena/index.jade
+++ b/views/arena/index.jade
@@ -30,7 +30,7 @@ block content
         p.indent#constraints 
 
         h3 Examples
-        p.indent#examples 
+        #examples 
 
         form(role='form')
           .form-group
@@ -69,9 +69,10 @@ block content
         p
           | When your code is complete and you are satisified with its functionality, run the system tests to determine whether it passes. You can run the system tests as many times as you deem necessary. The test results will display in the table below. When all tests pass, submit your code to receive your 'golden ticket' to TCO14.
           br
+          br
 
           button.btn.btn-primary#submitBtn(type='button', onclick='submit()') Run System Tests 
-          | &nbsp;
+          | &nbsp;&nbsp;
           button.btn.btn-success#submitCodeBtn(type='button', onclick='submitCode()') Finished? Submit your code! 
 
         #testResultsPanel
