--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,6 +24,7 @@ html
         div(style='display: inline;')
           img(height='1', width='1', style='border-style: none;', alt='', src='//www.googleadservices.com/pagead/conversion/1064594833/?label=OrawCLubgwoQkdvR-wM&guid=ON&script=0')
 
+    link(href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800', rel='stylesheet' ,type='text/css')
     != css('styles')
   body
     header
