--- a/views/home.jade
+++ b/views/home.jade
@@ -4,7 +4,7 @@ block content
   .landing-page.text-center
     .container-fluid
       .jumbotron
-        h1 The Ultimate Programming and Designing Tournament
+        h1 The Ultimate Programming and Design Tournament
         .container
           p Including first-ever TCO Developer Conference, Celebrity Match, &amp; Chances to win t-shirts and up to $25,000 in cash!
             p 
