added correct url

--- a/views/home.jade
+++ b/views/home.jade
@@ -8,7 +8,7 @@ block content
         .container
           p Including first-ever TCO Developer Conference, Celebrity Match, &amp; Chances to win t-shirts and up to $25,000 in cash!
             p 
-              a(href="#").btn-cywi(role="button")
+              a(href="/arena").btn-cywi(role="button")
                 span.sr-only Click Here To Code Your Way In
               a(href="http://community.topcoder.com/tco14/sponsor/sequoia-capital/").sponsor
                 span.sr-only sponsored by Sequoia Capital
