added sal recommendation

--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .landing-page
     .container
-      h1 Sign in Now on topcoder.com
+      h1 Sign in Now on topcoder.com >>
         br
         strong to claim your TCO Ticket
       p.lead
