--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -3,7 +3,8 @@ extends ../layout
 block content
   .landing-page
     .container
-      h1 Sign in Now on topcoder.com >>
+      h1 Sign in Now on 
+        a(href="https://www.topcoder.com/?action=showlogin") topcoder.com
         br
         strong to claim your TCO Ticket
       p.lead
