--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -3,17 +3,19 @@ extends ../layout
 block content
   .landing-page
     .container
-      h1 Sign in Now on 
-        a(href="https://www.topcoder.com/?action=showlogin") topcoder.com
+      h1
+        a(href="https://www.topcoder.com/?action=showlogin") Sign in
+        |  or 
+        a(href="https://www.topcoder.com/register/?utmSource=tco14&utmCampaign=CYWI&next=http://df14.topcoder.com/postreg") Register
+        |  on topcoder.com
         br
         strong to claim your TCO Ticket
       p.lead
         | Learn more about how to compete in these types
         br
-        | of challenges at topcoder 
-        a(href="http://help.topcoder.com/data-science/", target="_blank") here
+        | of challenges at topcoder
+        a(href="http://help.topcoder.com/data-science/", target="_blank")  here
       .col-md-8.text-right
         hr
         a(href="http://community.topcoder.com/tco14/sponsor/sequoia-capital/").sponsor
             span.sr-only sponsored by Sequoia Capital
-
