--- a/views/partials/navbar.jade
+++ b/views/partials/navbar.jade
@@ -21,7 +21,7 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
           li(class=title=='Login'?'active':undefined)
             a(href='https://www.topcoder.com/?action=showlogin') Login
           li(class=title=='Register'?'active':undefined)
-            a(href='http://www.topcoder.com/?action=callback&utmSource=tco14&utmCampaign=CYWI') Register
+            a(href='https://www.topcoder.com/register/?utmSource=tco14&utmCampaign=CYWI&next=http://codeyourwayin.topcoder.com/postreg') Register
         else
           li.dropdown(class=title=='Account Management'?'active':undefined)
             a.dropdown-toggle(href='#', data-toggle='dropdown')
