added correct url

--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -5,8 +5,8 @@ block content
     .container
       h1
         a(href="https://www.topcoder.com/?action=showlogin") Sign in
-        |  or 
-        a(href="https://www.topcoder.com/register/?utmSource=tco14&utmCampaign=CYWI&next=http://df14.topcoder.com/postreg") Register
+        |  or
+        a(href="https://www.topcoder.com/register/?utmSource=tco14&utmCampaign=CYWI&next=http://codeyourwayin.topcoder.com/postreg") Register
         |  on topcoder.com
         br
         strong to claim your TCO Ticket
